--- a/src/components/interstates/Interstates.css
+++ b/src/components/interstates/Interstates.css
@@ -9,9 +9,20 @@ include hover for each */
 }
 
 .interstate {
-    background-color: rgb(160, 255, 223);
-    border-color: azure;
-    color: black;
+    background-color: rgb(0, 60, 255);
+    border-color: rgb(3, 17, 17);
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
     padding: 0.5rem;
     margin: 0.5rem
 }
+
+.interstate_header {
+    background-color: rgb(14, 47, 235);
+    border-color: azure;
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
+    padding: 0.5rem;
+    margin: 0.5rem
+}
+
