--- a/src/components/exits/Exits.css
+++ b/src/components/exits/Exits.css
@@ -1,12 +1,138 @@
+.exits {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .exit {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: rgb(25, 170, 20);
-    border-color: rgb(3, 17, 17);
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    padding: 0.5rem;
-    margin: 0.5rem
+  appearance: none;
+  background: transparent;
+  border-right: 2px solid rgb(17, 148, 17);
+  border-bottom: 2px solid rgb(17, 148, 17);
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: rgb(17, 148, 17);
+  display: inline-block;
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 5px;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 4px 7px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  /* width: 30%; */
+  will-change: transform;
+  margin: 0.5rem;
+}
+
+.exit:disabled {
+  pointer-events: none;
+}
+
+.exit:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 12px 20px;
+  /* transform: translateY(-2px); */
+}
+
+.exit:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+
+
+
+
+
+
+
+.write_review {
+
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 4px 10px 0;
+  box-sizing: border-box;
+  color: #013001;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember", sans-serif;
+  font-size: 13px;
+  line-height: 29px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 100px;
+  margin: 0.5rem;
+}
+
+.write_review:hover {
+  background-color: #f7fafaec;
+}
+
+.write_review:focus {
+  border-color: #17c211;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
+}
+
+.all_reviews {
+
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #013001;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember", sans-serif;
+  font-size: 13px;
+  line-height: 29px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 100px;
+}
+
+.all_reviews:hover {
+  background-color: #f7fafaec;
+}
+
+.all_reviews:focus {
+  border-color: #17c211;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
+}
+
+.overall_rating {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: block;
+  position: fixed;
+  transform: translate(-4%, -4%);
+  top: -24px;
+  right: -24px;
+  text-align: center;
 }
