--- a/src/components/interstates/Interstates.css
+++ b/src/components/interstates/Interstates.css
@@ -1,28 +1,74 @@
-/* display each interstate with the interstate logo in a list
-include hover for each */
-
 .interstates {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    width: 98%;
+    
 }
 
 .interstate {
-    background-color: rgb(0, 60, 255);
-    border-color: rgb(3, 17, 17);
-    color: rgb(255, 255, 255);
+    position: relative;
     font-weight: bolder;
-    padding: 0.5rem;
-    margin: 0.5rem
+    text-align: center;
+    margin: .6em;
+    min-height: 30px;
+    min-width: 0;
+    padding: 0.05em;
+    box-shadow: 5px 5px 5px rgb(144, 159, 245);
+    border-radius: 15px;
+
+
+}
+
+.link_arrow {
+    text-align: right;
 }
 
 .interstate_header {
-    background-color: rgb(14, 47, 235);
-    border-color: azure;
-    color: rgb(255, 255, 255);
+    background: transparent;
+    border-color: rgb(14, 47, 235);
+    border-right: 1px solid;
+    border-bottom: 1.5px solid;
+    color: rgb(14, 47, 235);
     font-weight: bolder;
+    font-size: larger;
     padding: 0.5rem;
-    margin: 0.5rem
+    margin: 0.5rem;
+    width: 15%;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 4px 7px;
+    text-align: center;
+    text-decoration: none;
 }
 
+.interstate_title {
+    background: transparent;
+    border-color: rgb(14, 47, 235);
+    border-right: 1px solid;
+    border-bottom: 1.5px solid;
+    color: rgb(14, 47, 235);
+    font-weight: bolder;
+    font-size: larger;
+    padding: 0.5rem;
+    margin: 2.5rem;
+    width: 10%;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 4px 7px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.interstate_sheild {
+    /* background-color: rgb(14, 47, 235) ; */
+    /* width: 100%; */
+}
+
+.I_text {
+    color: rgb(14, 47, 235);
+    font-size: larger;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
