--- a/src/components/reviews/Reviews.css
+++ b/src/components/reviews/Reviews.css
@@ -3,51 +3,325 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 5em;
 }
 
-.rating {
-    padding: 0.7rem;
-    margin: 0.5rem 0;
-}
-
-.rating_delete {
-    margin-left: auto;
-    background-color: lightcoral;
-}
-
-.rating_edit {
-    margin-left: auto;
-    background-color: rgb(77, 255, 100);
-}
-
-
-.rating {
-    align-items: center;
+.review {
     background-color: #FFFFFF;
     border: 2px solid rgba(0, 0, 0, 0.1);
     border-radius: .25rem;
     box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
     box-sizing: border-box;
     color: rgba(0, 0, 0, 0.85);
-    cursor: pointer;
-    display: inline-flex;
     font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-weight: 600;
     justify-content: center;
     line-height: 1.25;
-    margin: 0;
+    margin: 2rem;
     min-height: 5rem;
     padding: calc(.875rem - 1px) calc(1.5rem - 1px);
-    position: relative;
+}
+
+.userReviews_header {
+    margin-top: 3em;
+}
+
+.interstate_name {
+    color: rgb(14, 47, 235);
+    
+}
+
+.exit_name {
+    color: rgb(10, 175, 10);
+    
+}
+
+.rating {
+    appearance: none;
+    background-color: transparent;
+    /* border: 2px solid #1A1A1A; */
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 2rem;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    box-shadow: rgba(0, 0, 0, .75) 0 4px 18px;
+    text-align: center;
     text-decoration: none;
-    transition: all 250ms;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    vertical-align: baseline;
-    width: auto;
+    will-change: transform;
+    width: 33%;
+    
 }
+
+.rating:disabled {
+    pointer-events: none;
+}
+
+.rating:hover {
+    box-shadow: rgba(0, 0, 0, .25) 0 12px 20px;
+    /* transform: translateY(-2px); */
+}
+
+.rating:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+
+.rating_delete {
+    background: transparent;
+    border: 1px solid;
+    border-radius: 8px;
+    box-shadow: rgba(213, 217, 217, .5) 0 4px 10px 0;
+    box-sizing: border-box;
+    color: #f1754f;
+    border-color: #f1754f;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Amazon Ember", sans-serif;
+    font-size: 13px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    width: 60px;
+    margin: 0.25em;
+}
+
+.rating_delete:disabled {
+    pointer-events: none;
+}
+
+.rating_delete:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 12px 20px;
+    transform: translateY(-1px);
+}
+
+.rating_delete:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+.review_save {
+    background: transparent;
+    border: 1px solid #d5d9d9;
+    border-radius: 8px;
+    box-shadow: rgba(213, 217, 217, .5) 0 4px 10px 0;
+    box-sizing: border-box;
+    color: #01a124;
+    border-color: #01a124;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Amazon Ember", sans-serif;
+    font-size: 13px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    width: 60px;
+    margin: 0.25em;
+}
+
+.review_save:disabled {
+    pointer-events: none;
+}
+
+.review_save:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 12px 20px;
+    transform: translateY(-1px);
+}
+
+.review_save:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+
+
+.rating_edit {
+    background: transparent;
+    border: 1px solid #d5d9d9;
+    border-radius: 8px;
+    box-shadow: rgba(213, 217, 217, .5) 0 4px 10px 0;
+    box-sizing: border-box;
+    color: #01a124;
+    border-color: #01a124;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Amazon Ember", sans-serif;
+    font-size: 13px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    width: 60px;
+    margin: 0.25em;
+}
+
+.rating_edit:disabled {
+    pointer-events: none;
+}
+
+.rating_edit:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 12px 20px;
+    transform: translateY(-1px);
+}
+
+.rating_edit:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+.see_review {
+    background: transparent;
+    border: 1px solid #d5d9d9;
+    border-radius: 8px;
+    box-shadow: rgba(213, 217, 217, .5) 0 4px 10px 0;
+    box-sizing: border-box;
+    color: #58e2e2;
+    border-color: #58e2e2;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Amazon Ember", sans-serif;
+    font-size: 13px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    width: 60px;
+    margin: 0.25em;
+}
+
+.see_review:disabled {
+    pointer-events: none;
+}
+
+.see_review:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 12px 20px;
+    transform: translateY(-1px);
+}
+
+.see_review:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+.reviewForm {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 5%;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    padding-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 4px 7px;
+    text-align: left;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+}
+
+
+
+.submit_button {
+    background: transparent;
+    border: 1px solid #d5d9d9;
+    border-radius: 8px;
+    box-shadow: rgba(213, 217, 217, .5) 0 4px 10px 0;
+    box-sizing: border-box;
+    color: #01a124;
+    border-color: #01a124;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Amazon Ember", sans-serif;
+    font-size: 13px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    width: 65px;
+    margin: 0.25em;
+}
+
+.submit_button:disabled {
+    pointer-events: none;
+}
+
+.submit_button:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 12px 20px;
+    transform: translateY(-1px);
+}
+
+.submit_button:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+
+.exit_interstate {
+    padding: 0.5rem;
+    font-size: large;
+    color: rgb(14, 47, 235);
+}
+
+.exit_exit {
+    padding: 0.5rem;
+    font-size: large;
+    color: rgb(10, 175, 10);
+}
+
 
 .button-6:hover,
 .button-6:focus {
@@ -68,50 +342,58 @@
     transform: translateY(0);
 }
 
-.rating .circle {
-    position: absolute;
-    top: -21px;
-    right: -21px;
-    width: 40px;
-    height: 40px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    /* background: linear-gradient(to right, rgb(85, 231, 0), rgb(152, 241, 140)); */
-    }
-/* 
-.rating .circle-orange {
-    position: absolute;
-    top: -21px;
-    right: -21px;
-    width: 40px;
-    height: 40px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    background-color: orange;
+.review_display {
+    appearance: none;
+    background-color: transparent;
+    /* border: 2px solid #1A1A1A; */
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 5em;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    padding-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 4px 7px;
+    text-align: left;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 35%;
+    will-change: transform;
 }
 
-.rating .circle-yellow { 
-    position: absolute;
-    top: -21px;
-    right: -21px;
-    width: 40px;
-    height: 40px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    background-color: yellow;
+.review_scores {
+    font-size: small;
+    margin-top: 5em;
 }
 
-.rating .circle-green {
-    position: absolute;
-    top: -21px;
-    right: -21px;
-    width: 40px;
-    height: 40px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    background-color: rgb(0, 255, 0);
-} */
+.review_footer {
+    font-size: smaller;
+}
+
+.overall_rating {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: block;
+    position: fixed;
+    transform: translate(-4%, -4%);
+    top: -24px;
+    right: -24px;
+    text-align: center;
+}
+
+.comments_display {
+    font-size: small;
+    margin: 1em;
+}
